# midas-journal-737

Submission/: CMakeLists.txt  README.txt
Submission/Data/: 3D_test.vtk
Submission/src/: 3D_test.cpp  itkActiveContourMinCutImageFilter.h  itkActiveContourMinCutImageFilter.txx  itkActiveContourMinCutImageFilter.txx~  itkGMMEstimatorImageFilter.h  itkGMMEstimatorImageFilter.txx  itkGMMEstimatorImageFilter.txx~  itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.txx  itkShortestPathImageFilter.h  itkShortestPathImageFilter.txx  itkTwoPointsVesselSegmenterImageFilter.h  itkTwoPointsVesselSegmenterImageFilter.txx
